--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,256 +5,141 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:background="@color/black"
+    tools:ignore="HardcodedText">
 
-    <TextView
-        android:id="@+id/txtResult"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="220dp"
-        android:background="#FFFFFF"
-        android:gravity="center|right"
-        android:textColor="#000000"
-        android:textSize="32sp"
-        android:textStyle="bold"
-        tools:layout_editor_absoluteX="180dp"
-        tools:layout_editor_absoluteY="80dp" />
+        android:layout_height="0dp"
+        android:layout_weight="2"
+        android:padding="20dp">
+        <TextView
+            android:id="@+id/workingsTV"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text=""
+            android:lines="2"
+            android:maxLines="2"
+            android:textAlignment="textEnd"
+            android:textColor="@color/primary"
+            android:textSize="25sp"
+            app:layout_constraintBottom_toTopOf="@id/resultsTV"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+        />
+        <TextView
+            android:id="@+id/resultsTV"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text=""
+            android:lines="1"
+            android:maxLines="2"
+            android:textAlignment="textEnd"
+            android:textColor="@color/primary"
+            android:textSize="40sp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+        />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:weightSum="5">
+        style="@style/buttonRow">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:orientation="horizontal"
-            android:weightSum="4">
-
-            <Button
-                android:id="@+id/btn_clear"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="3"
-                android:background="#7700FF"
-                android:onClick="ButtonClick"
-                android:text="Clear"
-                android:textColor="#FFFFFF"
-                android:textSize="24sp" />
-
-
-            <Button
-                android:id="@+id/btn_divide"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:background="#FFFFFF"
-                android:onClick="ButtonClick"
-                android:text="÷"
-                android:textColor="#FFFFFF"
-                android:textSize="30sp"
-                android:textStyle="bold" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:orientation="horizontal"
-            android:weightSum="4">
-
-            <Button
-                android:id="@+id/btn_7"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:background="#FFFFFF"
-                android:onClick="ButtonClick"
-                android:text="7"
-                android:textSize="24sp" />
-
-            <Button
-                android:id="@+id/btn_8"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:background="#FFFFFF"
-                android:onClick="ButtonClick"
-                android:text="8"
-                android:textSize="24sp" />
-
-            <Button
-                android:id="@+id/btn_9"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:background="#FFFFFF"
-                android:onClick="ButtonClick"
-                android:text="9"
-                android:textSize="24sp" />
-
-            <Button
-                android:id="@+id/btn_multiply"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:background="#FFFFFF"
-                android:onClick="ButtonClick"
-                android:text="x"
-                android:textColor="#FFFFFF"
-                android:textSize="18sp"
-                android:textStyle="bold" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:orientation="horizontal"
-            android:weightSum="4">
-
-            <Button
-                android:id="@+id/btn_4"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:background="#FFFFFF"
-                android:onClick="ButtonClick"
-                android:text="4"
-                android:textSize="24sp" />
-
-            <Button
-                android:id="@+id/btn_5"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:background="#FFFFFF"
-                android:onClick="ButtonClick"
-                android:text="5"
-                android:textSize="24sp" />
-
-            <Button
-                android:id="@+id/btn_6"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:background="#FFFFFF"
-                android:onClick="ButtonClick"
-                android:text="6"
-                android:textSize="24sp" />
-
-            <Button
-                android:id="@+id/btn_minus"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:background="#FFFFFF"
-                android:onClick="ButtonClick"
-                android:text="-"
-                android:textColor="#FFFFFF"
-                android:textSize="36sp"
-                android:textStyle="bold" />
-
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:orientation="horizontal"
-            android:weightSum="4">
-
-            <Button
-                android:id="@+id/btn_1"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:background="#FFFFFF"
-                android:onClick="ButtonClick"
-                android:text="1"
-                android:textSize="24sp" />
-
-            <Button
-                android:id="@+id/btn_2"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:background="#FFFFFF"
-                android:onClick="ButtonClick"
-                android:text="2"
-                android:textSize="24sp" />
-
-            <Button
-                android:id="@+id/btn_3"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:background="#FFFFFF"
-                android:onClick="ButtonClick"
-                android:text="3"
-                android:textSize="24sp" />
-
-            <Button
-                android:id="@+id/btn_add"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:background="#FFFFFF"
-                android:onClick="ButtonClick"
-                android:text="+"
-                android:textColor="#FFFFFF"
-                android:textSize="24sp"
-                android:textStyle="bold" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:orientation="horizontal"
-            android:weightSum="4">
-
-            <Button
-                android:id="@+id/btn_0"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="2"
-                android:background="#FFFFFF"
-                android:onClick="ButtonClick"
-                android:text="0"
-                android:textSize="24sp" />
-
-            <Button
-                android:id="@+id/btn_dot"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:background="#FFFFFF"
-                android:onClick="ButtonClick"
-                android:text="."
-                android:textSize="30sp"
-                android:textStyle="bold" />
-
-            <Button
-                android:id="@+id/btn_equals"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:background="#7700FF"
-                android:onClick="ButtonClick"
-                android:text="="
-                android:textColor="#FFFFFF"
-                android:textSize="30sp"
-                android:textStyle="bold" />
-
-        </LinearLayout>
+        <androidx.appcompat.widget.AppCompatButton
+            style="@style/buttonOperator"
+            android:onClick="allClearAction"
+            android:text="AC"/>
+        <androidx.appcompat.widget.AppCompatButton
+            style="@style/buttonOperator"
+            android:onClick="backSpaceAction"
+            android:text="⌫"/>
+        <androidx.appcompat.widget.AppCompatButton
+            style="@style/buttonOperator"
+            android:text="" />
+        <androidx.appcompat.widget.AppCompatButton
+            style="@style/buttonOperator"
+            android:text="/"/>
 
     </LinearLayout>
+
+    <LinearLayout
+        style="@style/buttonRow">
+
+        <androidx.appcompat.widget.AppCompatButton
+            style="@style/buttonNumber"
+            android:text="7"/>
+        <androidx.appcompat.widget.AppCompatButton
+            style="@style/buttonNumber"
+            android:text="8"/>
+        <androidx.appcompat.widget.AppCompatButton
+            style="@style/buttonNumber"
+            android:text="9" />
+        <androidx.appcompat.widget.AppCompatButton
+            style="@style/buttonOperator"
+            android:text="x"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        style="@style/buttonRow">
+
+        <androidx.appcompat.widget.AppCompatButton
+            style="@style/buttonNumber"
+            android:text="4"/>
+        <androidx.appcompat.widget.AppCompatButton
+            style="@style/buttonNumber"
+            android:text="5"/>
+        <androidx.appcompat.widget.AppCompatButton
+            style="@style/buttonNumber"
+            android:text="6" />
+        <androidx.appcompat.widget.AppCompatButton
+            style="@style/buttonOperator"
+            android:text="-"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        style="@style/buttonRow">
+
+        <androidx.appcompat.widget.AppCompatButton
+            style="@style/buttonNumber"
+            android:text="1"/>
+        <androidx.appcompat.widget.AppCompatButton
+            style="@style/buttonNumber"
+            android:text="2"/>
+        <androidx.appcompat.widget.AppCompatButton
+            style="@style/buttonNumber"
+            android:text="3" />
+        <androidx.appcompat.widget.AppCompatButton
+            style="@style/buttonOperator"
+            android:text="+"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        style="@style/buttonRow">
+
+        <androidx.appcompat.widget.AppCompatButton
+            style="@style/buttonNumber"
+            android:text="."/>
+        <androidx.appcompat.widget.AppCompatButton
+            style="@style/buttonNumber"
+            android:text="0"/>
+
+        <androidx.appcompat.widget.AppCompatButton
+        style="@style/buttonOperator"
+            android:layout_weight="2"
+            android:textSize="40sp"
+            android:onClick="equalsAction"
+            android:text="=" />
+
+    </LinearLayout>
+
+
 
 
 </LinearLayout>
